@@ -1,0 +1,17 @@
+<html>
+<p>
+<big><big><b>
+@sim-name@ @version@
+</b></big></big>
+<p>
+Click to launch English version:
+<ul>
+<li><a href="@jnlp-filename@">Launch @sim-name@</a>
+</ul>
+<p>
+<b>What's new:</b>
+<p>
+@new-summary@
+<p>
+<p>
+</html>
